theme: stop tooltip jank on status page
For one reason or another (I chose not to spend too much time on it),
hovering over a shard and then moving to another shard leaves that first
shard's tooltip up for a noticeable moment, causing some funny business
when quickly hovering over a multitude of shards.

This is overall quite annoying and tends to make the page feel slow
(even though it isn't). Turns out, setting `transition-duration` to zero
seconds makes this side effect (apparently caused by Bootstrap)
magically go away. Incredible.

--- a/yagpdb_nord.css
+++ b/yagpdb_nord.css
@@ -570,6 +570,7 @@
 
 	.tooltip {
 		opacity: 0.9 !important;
+		transition-duration: 0s !important;
 	}
 
 	.ui-pnotify > span {
